
2018-05-18  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* common.c [_WIN32]: only define __GMP_LIBGMP_DLL if it is not
	  defined already, allowing to use a static version by defining
	  __GMP_LIBGMP_DLL to 0

2018-05-09  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* fileio.c (cob_file_open): fix for bug #520
	  check f->fd before using it to prevent SIGSEGV on OPEN OUTPUT
	* common.c (cob_sig_handler): minor format adjustment

2018-05-08  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* termio.c (cob_display): cater for HAVE_POPEN
	* common.h, fileio.c [__ORANGEC__]: minor adjustments for
	  preprocessor defines
	* common.c: added OrangeC version info
	* reportio.c: removed unneeded header and defines

2018-04-16  Luke Smith <cobcoder@users.sourceforge.net>

	* screenio.c:
	   - HOME and END toggle on current column.
	   - Backspace beep column 1.

2018-04-10  Luke Smith <cobcoder@users.sourceforge.net>

	* screenio.c:
	   - replace Alt-Home and Alt-End with toggle functions
	   - fix Insert key at column 1
	   - fix other alt keys

2018-04-10  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* reportio.c [_WIN32]: fix redefinition of lseek

2018-04-03  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* screenio.c (cob_screen_init): fix definition of alt keys
	  when function keys have negative values

2018-04-02  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* common.c (cob_sys_getopt_long_long): fixed free of changed pointer
	* common.c (cob_gettmpdir): check if environment variables for TEMP
	  points to usable directory before using it (fallback to ".")
	* common.c (cob_init_nomain) [HAVE_READLINK]: fixed strcpy of
	  unterminated return from (readlink)
	* common.c, reportio.c, termio.c: changed occurrences of strcpy
	  to strncpy to prevent possible buffer overflows
	* common.h: moved definition of COB_MAX_SUBSCRIPTS from cobc/tree.h
	* termio.c (cob_dump_field): allow longer field names and